--- a/cloud-budget/src/pages/index.handlebars
+++ b/cloud-budget/src/pages/index.handlebars
@@ -2,9 +2,13 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<title>Однако</title>
+	<title>Document</title>
 </head>
 <body>
-	{{> ../components/component-header/header }}
+	{{> ../components/menu/menu }}
+
+	{{> ../components/header/header }}
+
+	{{> ../components/footer/footer }}
 </body>
 </html>
