--- a/cloud-budget/src/global/styles.scss
+++ b/cloud-budget/src/global/styles.scss
@@ -1,4 +1,6 @@
-@import "main";
-@import "../components/component-menu/menu";
-@import "../components/component-header/header";
-@import "../components/component-footer/footer";
+@import "scss/_variables";
+@import "scss/_main";
+@import "scss/_fonts";
+@import "../components/footer/_footer";
+@import "../components/header/_header";
+@import "../components/menu/_menu";
