--- a/cloud-budget/src/global/scss/_variables.scss
+++ b/cloud-budget/src/global/scss/_variables.scss
@@ -1,4 +1,8 @@
-//$body-font: ;
-//$heading-font: ;
-//$base-font-size: 16px;
-//$font-color: ;
+$body-font: "Lato", sans-serif;
+$base-font-size: 16px;
+$font-color: white;
+//$phones: 320px;
+//$tablets: 600px;
+//$tablets: 768px;
+//$laptops_desktops: 992px;
+$desktop: 1200px;
