--- a/cloud-budget/src/pages/index.handlebars
+++ b/cloud-budget/src/pages/index.handlebars
@@ -5,10 +5,6 @@
 	<title>Document</title>
 </head>
 <body>
-	{{> ../components/menu/menu }}
-
-	{{> ../components/header/header }}
-
-	{{> ../components/footer/footer }}
+	<h1>Однако работает</h1>
 </body>
 </html>
