--- a/cloud-budget/src/global/scss/_main.scss
+++ b/cloud-budget/src/global/scss/_main.scss
@@ -1,14 +1,7 @@
-* { box-sizing: border-box; margin: 0; padding: 0; }
-
-html {
+html, body {
     font-family: $body-font;
     font-size: $base-font-size;
     color: $font-color;
-}
-
-body {
-    font-family: "Lato", sans-serif;
-    transition: 1s;
 }
 
 .container {
