--- a/cloud-budget/src/pages/index.handlebars
+++ b/cloud-budget/src/pages/index.handlebars
@@ -2,9 +2,16 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta name="format-detection" content="telephone=no">
+
+	<title>Cloud Budget</title>
 </head>
 <body>
-	<h1>Однако работает</h1>
+	<div class="container">
+		{{> ../components/header/header }}
+		{{> ../components/menu/menu }}
+	</div>
 </body>
 </html>
