--- a/cloud-budget/src/pages/index.handlebars
+++ b/cloud-budget/src/pages/index.handlebars
@@ -9,9 +9,12 @@
 	<title>Cloud Budget</title>
 </head>
 <body>
-	<div class="container">
-		{{> ../components/header/header }}
-		{{> ../components/menu/menu }}
+	<div class="wrap__header">
+		<div class="wrap__overlay">
+			<div class="container">
+				{{> ../components/header/header }}
+			</div>
+		</div>
 	</div>
 </body>
 </html>
