--- a/cloud-budget/src/components/header/header.handlebars
+++ b/cloud-budget/src/components/header/header.handlebars
@@ -1,1 +1,19 @@
-<h1>Проверка работы</h1>
+<header>
+	{{> ../menu/menu }}
+
+	<div class="header__title">
+		<h1>CLOUDBUDGET</h1>
+	</div>
+
+	<div class="header__desc">
+		<p>
+			Cloud budget management for everyone.
+			Only €69.95 a Month After a 7 Day Trial
+			of Up to €4.99
+		</p>
+
+		<button class="btn-sign">
+			SIGN UP
+		</button>
+	</div>
+</header>
