--- a/cloud-budget/src/global/scss/_main.scss
+++ b/cloud-budget/src/global/scss/_main.scss
@@ -6,4 +6,9 @@ html, body {
 
 .container {
     max-width: $desktop;
+
+    padding-left: 15px;
+    padding-right: 15px;
+
+    margin: 0 auto;
 }
