--- a/cloud-budget/src/global/scss/styles.scss
+++ b/cloud-budget/src/global/scss/styles.scss
@@ -11,3 +11,4 @@
 @import "../../components/menu/menu";
 @import "../../components/header/header";
 @import "../../components/footer/footer";
+@import "../../components/section-1/section-1";
