--- a/cloud-budget/src/pages/index.handlebars
+++ b/cloud-budget/src/pages/index.handlebars
@@ -16,5 +16,11 @@
 			</div>
 		</div>
 	</div>
+
+	<div class="wrap__section-1">
+		<div class="container">
+			{{> ../components/section-1/section-1 }}
+		</div>
+	</div>
 </body>
 </html>
