--- a/cloud-budget/src/global/scss/styles.scss
+++ b/cloud-budget/src/global/scss/styles.scss
@@ -12,3 +12,4 @@
 @import "../../components/header/header";
 @import "../../components/footer/footer";
 @import "../../components/section-1/section-1";
+@import "../../components/section-2/section-2";
