--- a/cloud-budget/src/pages/index.handlebars
+++ b/cloud-budget/src/pages/index.handlebars
@@ -17,9 +17,17 @@
 		</div>
 	</div>
 
-	<div class="wrap__section-1">
-		<div class="container">
+	<div class="container">
+		<div class="section-1">
 			{{> ../components/section-1/section-1 }}
+		</div>
+	</div>
+
+	<div class="wrap__section-2">
+		<div class="container">
+			<div class="section-2">
+				{{> ../components/section-2/section-2 }}
+			</div>
 		</div>
 	</div>
 </body>
