--- a/cloud-budget/src/pages/index.handlebars
+++ b/cloud-budget/src/pages/index.handlebars
@@ -30,5 +30,11 @@
 			</div>
 		</div>
 	</div>
+
+	<div class="container">
+		<div class="section-3">
+			{{> ../components/section-3/section-3 }}
+		</div>
+	</div>
 </body>
 </html>
