--- a/cloud-budget/src/global/scss/styles.scss
+++ b/cloud-budget/src/global/scss/styles.scss
@@ -13,3 +13,4 @@
 @import "../../components/footer/footer";
 @import "../../components/section-1/section-1";
 @import "../../components/section-2/section-2";
+@import "../../components/section-3/section-3";
