--- a/cloud-budget/src/components/section-3/section-3.handlebars
+++ b/cloud-budget/src/components/section-3/section-3.handlebars
@@ -3,27 +3,31 @@
 </div>
 
 <div class="section-3__row">
-	<div class="section-3__row__block section-3__row__block--1">
-		<div class="section-3__img"></div>
+	<div class="section-3__row__block">
+		<div class="section-3__img section-3__img--1"></div>
+		<p class="numBig">01</p>
 		<h2>Cloud Storage</h2>
-		<p>Access your account from anywhere in the world on any device</p>
+		<p class="text">Access your account from anywhere in the world on any device</p>
 	</div>
 
-	<div class="section-3__row__block section-3__row__block--2">
-		<div class="section-3__img"></div>
+	<div class="section-3__row__block">
+		<div class="section-3__img section-3__img--2"></div>
+		<p class="numBig">02</p>
 		<h2>Secure</h2>
-		<p>All your information is stored on secure cloud servers</p>
+		<p class="text">All your information is stored on secure cloud servers</p>
 	</div>
 
-	<div class="section-3__row__block section-3__row__block--3">
-		<div class="section-3__img"></div>
+	<div class="section-3__row__block">
+		<div class="section-3__img section-3__img--3"></div>
+		<p class="numBig">03</p>
 		<h2>PDF Download</h2>
-		<p>Download any of your reports in PDF format</p>
+		<p class="text">Download any of your reports in PDF format</p>
 	</div>
 
-	<div class="section-3__row__block section-3__row__block--4">
-		<div class="section-3__img"></div>
+	<div class="section-3__row__block">
+		<div class="section-3__img section-3__img--4"></div>
+		<p class="numBig">04</p>
 		<h2>CSV Download</h2>
-		<p>All your information is stored on secure cloud servers</p>
+		<p class="text">All your information is stored on secure cloud servers</p>
 	</div>
 </div>
