--- a/cloud-budget/src/pages/index.handlebars
+++ b/cloud-budget/src/pages/index.handlebars
@@ -36,5 +36,13 @@
 			{{> ../components/section-3/section-3 }}
 		</div>
 	</div>
+
+	<div class="wrap__section-4">
+		<div class="container">
+			<div class="section-4">
+				{{> ../components/section-4/section-4 }}
+			</div>
+		</div>
+	</div>
 </body>
 </html>
