--- a/cloud-budget/src/pages/index.handlebars
+++ b/cloud-budget/src/pages/index.handlebars
@@ -44,5 +44,11 @@
 			</div>
 		</div>
 	</div>
+
+	<div class="container">
+		<div class="contact">
+			{{> ../components/contact/contact }}
+		</div>
+	</div>
 </body>
 </html>
