--- a/cloud-budget/src/global/scss/styles.scss
+++ b/cloud-budget/src/global/scss/styles.scss
@@ -15,3 +15,4 @@
 @import "../../components/section-2/section-2";
 @import "../../components/section-3/section-3";
 @import "../../components/section-4/section-4";
+@import "../../components/contact/contact";
