--- a/cloud-budget/src/pages/index.handlebars
+++ b/cloud-budget/src/pages/index.handlebars
@@ -50,5 +50,13 @@
 			{{> ../components/contact/contact }}
 		</div>
 	</div>
+
+	<div class="wrap__footer">
+		<div class="container">
+			<footer class="footer">
+				{{> ../components/footer/footer }}
+			</footer>
+		</div>
+	</div>
 </body>
 </html>
