Готово. Чистка кода производиться не будет, так как это был эксперементальный вариант
Готово. Чистка кода производиться не будет, так как это была эксперементальная вёрстка.

--- a/cloud-budget/src/components/footer/footer.handlebars
+++ b/cloud-budget/src/components/footer/footer.handlebars
@@ -23,10 +23,8 @@
 <div class="footer__contact">
     <h3>Get in Touch</h3>
 
-    <ul>
-        <li>info@cloudbudget.com</li>
-        <li>+1 844-721-7120</li>
-    </ul>
+	<p>info@cloudbudget.com</p>
+	<p>+1 844-721-7120</p>
 
     <div class="footer__contact__social">
 		<img src="assets/feather-facebook.svg" alt="">
