--- a/CloudBudget/src/pages/index.handlebars
+++ b/CloudBudget/src/pages/index.handlebars
@@ -10,11 +10,8 @@
 </head>
 <body>
 	<div class="wrap wrap__header">
-		{{!-- {{> ../components/header/header }} --}}
-	</div>
-
-	<div class="wrap wrap__footer">
-		{{!-- {{> ../components/footer/footer }} --}}
+		{{> ../layout/menu/menu }}
+		{{> ../layout/header/header }}
 	</div>
 </body>
 </html>
