--- a/CloudBudget/src/base/scss/_main.scss
+++ b/CloudBudget/src/base/scss/_main.scss
@@ -1,14 +1,6 @@
 html, body {
     font-family: $body-font;
+    font-weight: $base-font-weight;
     font-size: $base-font-size;
     color: $font-color;
-}
-
-.container {
-    max-width: $desktop;
-
-    padding-left: 15px;
-    padding-right: 15px;
-
-    margin: 0 auto;
 }
