--- a/CloudBudget/src/base/scss/_variables.scss
+++ b/CloudBudget/src/base/scss/_variables.scss
@@ -1,4 +1,5 @@
 $body-font: "Lato", sans-serif;
+$base-font-weight: 400;
 $base-font-size: 16px;
 $font-color: black;
 
@@ -6,5 +7,3 @@ $color-white: #FFFFFF;
 $color-black: #000000;
 $color-red: #EE3D1B;
 $color-rosa:#D52047;
-
-$desktop: 1230px;
