--- a/CloudBudget/src/pages/index.handlebars
+++ b/CloudBudget/src/pages/index.handlebars
@@ -13,5 +13,9 @@
 		{{> ../layout/menu/menu }}
 		{{> ../layout/header/header }}
 	</div>
+
+	<div class="wrap wrap__section-1">
+		{{> ../layout/section-1/section-1 }}
+	</div>
 </body>
 </html>
