--- a/CloudBudget/src/layout/header/_header.scss
+++ b/CloudBudget/src/layout/header/_header.scss
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     
-    background: url('../assets/img/bg-header.png') center/cover no-repeat;
+    background: url('../assets/images/bg-header.png') center/cover no-repeat;
 
     &::after {
         content: "";
