--- a/CloudBudget/src/layout/section-1/_section-1.scss
+++ b/CloudBudget/src/layout/section-1/_section-1.scss
@@ -62,7 +62,9 @@
             left: -33px;
             bottom: 0;
 
-            background: url("/assets/playButton.svg") no-repeat center;
+            background-image: url("../assets/images/playButton.svg");
+            background-repeat: no-repeat;
+            background-position: center;
             
             width: 66px;
             height: 100%;
