--- a/CloudBudget/src/base/styles.scss
+++ b/CloudBudget/src/base/styles.scss
@@ -14,3 +14,8 @@
 @import "../layout/menu/menu";
 @import "../layout/header/header";
 @import "../layout/section-1/section-1";
+@import "../layout/features/features";
+@import "../layout/technology/technology";
+@import "../layout/money/money";
+@import "../layout/contact/contact";
+@import "../layout/footer/footer";
