--- a/CloudBudget/src/pages/index.handlebars
+++ b/CloudBudget/src/pages/index.handlebars
@@ -17,5 +17,25 @@
 	<div class="wrap wrap__section-1">
 		{{> ../layout/section-1/section-1 }}
 	</div>
+
+	<div class="wrap wrap__features">
+		{{> ../layout/features/features }}
+	</div>
+
+	<div class="wrap wrap__technolory">
+		{{> ../layout/technology/technology }}
+	</div>
+
+	<div class="wrap wrap__money">
+		{{> ../layout/money/money }}
+	</div>
+
+	<div class="wrap wrap__contact">
+		{{> ../layout/contact/contact }}
+	</div>
+	
+	<div class="wrap wrap__footer">
+		{{> ../layout/footer/footer }}
+	</div>
 </body>
 </html>
