--- a/Blooger/css/Style.css
+++ b/Blooger/css/Style.css
@@ -52,12 +52,36 @@ ul {
     background: white;
     padding: 0 2rem;
     height: 0rem;
-    min-height: 40vh;
+    min-height: 10vh;
     overflow: hidden;
+    transition: height .4s ease-in-out;
 }
 
 .nav .nav-menu {
     justify-content: space-between;
+}
+
+.nav .toggle-collapse {
+    position: absolute;
+    top: 0;
+    width: 90%;
+    cursor: pointer;
+    display: none;
+}
+
+.nav .toggle-collapse .toggle-icons {
+    display: flex;
+    justify-content: flex-end;
+    padding: 1.7rem 0 ;
+}
+
+.nav .toggle-collapse .toggle-icons i {
+    font-size: 1.4rem;
+    color: var(--text-gray);
+}
+
+.collapse {
+    height: 30rem;
 }
 
 .nav .nav-items {
@@ -102,3 +126,18 @@ ul {
 }
 
 /* --/--/--/-- navbar --/--/--/-- */
+
+
+/* Media */
+
+@media only screen and (max-width: 750px) {
+    .nav .nav-menu, .nav .nav-items {
+        flex-direction: column;
+    }
+
+    .nav .toggle-collapse {
+        display: initial;
+    }
+}
+
+/* // Media \\ */
