--- a/Blooger/css/Style.css
+++ b/Blooger/css/Style.css
@@ -338,6 +338,26 @@ main .post-content .post-title a {
 /* - / -- Site Content -- \ - */
  
 
+/* --- Sidebar --- */
+.site-content > .sidebar .category-list {
+    font-family: var(--Livvic);
+}
+
+.site-content > .sidebar .category-list .list-items {
+    background: var(--sky);
+    padding: .4rem 1rem;
+    margin: .8rem 0;
+    border-radius: 3rem;
+    width: 70%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.site-content > .sidebar .category-list .list-items a {
+    color: black;
+}
+/* - / -- Sidebar -- \ - */
+
 /* --- / --- / ---- Main Content ---- \ --- \ --- */
 
 
