--- a/Blooger/css/Style.css
+++ b/Blooger/css/Style.css
@@ -469,6 +469,21 @@ footer.footer .follow div i {
     color: var(--white);
     padding: 0 .4rem;
 }
+
+footer.footer .move-up {
+    position: absolute;
+    right: 6%;
+    top: 50%;
+}
+
+footer.footer .move-up span {
+    color: var(--midnight);
+}
+
+footer.footer .move-up span:hover {
+    color: var(--white);
+    cursor: pointer;
+}
 /* --- / ---- Footer ---- \ --- */
 
 
