--- a/Blooger/css/Style.css
+++ b/Blooger/css/Style.css
@@ -489,6 +489,22 @@ footer.footer .move-up span:hover {
 
 /* Media */
 
+@media only screen and (max-width: 1130px) {
+    .site-content .post-content > .post-image .post-info {
+        left: 2rem !important;
+        bottom: 1.2rem !important;
+        border-radius: 0% !important;
+    }
+
+    .site-content .sidebar .popular-post .post-info {
+        display: none !important;
+    }
+
+    footer.footer .container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
 @media only screen and (max-width: 750px) {
     .nav .nav-menu, .nav .nav-items {
         flex-direction: column;
@@ -496,6 +512,33 @@ footer.footer .move-up span:hover {
 
     .nav .toggle-collapse {
         display: initial;
+    }
+
+    main .site-content {
+        grid-template-columns: 100%;
+    }
+
+    footer.footer .container {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+@media only screen and (max-width: 520px) {
+    main .blog {
+        height: 125vh;
+    }
+
+    .site-content .post-content > .post-image .post-info {
+        display: none;
+    }
+
+    footer.footer .container > div {
+        padding: 1rem .9rem !important;
+        /* text-align: center; */
+    }
+
+    nav .toggle-collapse {
+        width: 80% !important;
     }
 }
 
