--- a/gifts/src/components/articles/_articles.scss
+++ b/gifts/src/components/articles/_articles.scss
@@ -47,6 +47,7 @@
         }
 
         &:hover {
+            cursor: pointer;
             box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.05);
         }
     }
