--- a/gifts/src/global/scss/_btn.scss
+++ b/gifts/src/global/scss/_btn.scss
@@ -14,6 +14,7 @@
     transition: all ease-in-out .2s;
 
     &:hover, &:focus {
+        cursor: pointer;
         outline: none;
         box-shadow: 0 6px 6px 3px rgba(0, 0, 0, 0.5);
     }
@@ -39,6 +40,7 @@
     transition: all ease-in-out .2s;
 
     &:hover, &:focus {
+        cursor: pointer;
         font-weight: bold;
         outline: none;
         box-shadow: 0 6px 6px 3px rgba(247, 148, 30, 0.5);
@@ -63,6 +65,7 @@
     transition: all ease-in-out .2s;
 
     &:hover, &:focus {
+        cursor: pointer;
         font-weight: bold;
         outline: none;
         box-shadow: 0 6px 6px 3px rgba(247, 148, 30, 0.5);
@@ -81,6 +84,7 @@
     transition: box-shadow ease-in-out .2s;
 
     &:hover, &:focus {
+        cursor: pointer;
         outline: none;
         box-shadow: 0 6px 6px 3px rgba(0, 0, 0, 0.5);
     }
@@ -97,6 +101,7 @@
     transition: box-shadow ease-in-out .2s;
 
     &:hover, &:focus {
+        cursor: pointer;
         outline: none;
         box-shadow: 0 6px 6px 3px rgba(0, 0, 0, 0.5);
     }
